--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "main",
-  "private": true,
-  "author": "AntoineTrev <trevel.antoine@gmail.com>",
-  "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.4.31"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.4",
-    "vue-tsc": "^2.0.24"
-  }
+    "name": "main",
+    "private": true,
+    "author": "AntoineTrev <trevel.antoine@gmail.com>",
+    "version": "1.0.0",
+    "type": "module",
+    "scripts": {
+        "start": "vite",
+        "build": "vue-tsc -b && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "supabase_authentication": "workspace:packages/supabase_authentication",
+        "vue": "^3.4.31"
+    },
+    "devDependencies": {
+        "@types/node": "^20.2.5",
+        "@vitejs/plugin-vue": "^5.0.5",
+        "typescript": "^5.2.2",
+        "vite": "^5.3.4",
+        "vue-tsc": "^2.0.24"
+    }
 }
