--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -7,16 +7,25 @@
     "scripts": {
         "start": "vite",
         "build": "vue-tsc --noEmit && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "lint": "eslint src",
+        "format": "prettier .  --write"
     },
     "dependencies": {
         "supabase_authentication": "workspace:^",
         "vue": "^3.4.31"
     },
     "devDependencies": {
+        "@eslint/js": "^9.8.0",
+        "@types/eslint": "^9",
         "@types/node": "^20.2.5",
         "@vitejs/plugin-vue": "^5.0.5",
+        "eslint": "9.x",
+        "eslint-plugin-vue": "^9.27.0",
+        "globals": "^15.9.0",
+        "prettier": "^3.3.3",
         "typescript": "^5.2.2",
+        "typescript-eslint": "^8.0.0",
         "vite": "^5.3.4",
         "vue-tsc": "^2.0.24"
     }
