--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -12,8 +12,10 @@
         "format": "prettier .  --write"
     },
     "dependencies": {
+        "@primevue/themes": "4.0.4",
+        "primevue": "4.0.4",
         "supabase_authentication": "workspace:^",
-        "vue": "^3.4.31"
+        "vue": "3.4.35"
     },
     "devDependencies": {
         "@eslint/js": "^9.8.0",
@@ -27,6 +29,7 @@
         "typescript": "^5.2.2",
         "typescript-eslint": "^8.0.0",
         "vite": "^5.3.4",
+        "vite-plugin-dynamic-import": "^1.5.0",
         "vue-tsc": "^2.0.24"
     }
 }
