--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -12,6 +12,11 @@
         "format": "prettier .  --write"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.6.0",
+        "@fortawesome/free-brands-svg-icons": "^6.6.0",
+        "@fortawesome/free-regular-svg-icons": "^6.6.0",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/vue-fontawesome": "^3.0.8",
         "@primevue/themes": "4.0.4",
         "primevue": "4.0.4",
         "supabase_authentication": "workspace:^",
