--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -18,6 +18,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/vue-fontawesome": "^3.0.8",
         "@primevue/themes": "4.0.4",
+        "@vueuse/core": "^10.11.0",
         "primevue": "4.0.4",
         "supabase_authentication": "workspace:^",
         "vue": "3.4.35"
