--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -19,16 +19,16 @@
         "@fortawesome/vue-fontawesome": "^3.0.8",
         "@primevue/themes": "4.0.4",
         "@vueuse/core": "^10.11.0",
-        "primevue": "4.0.4",
+        "primevue": "^4.0.4",
         "supabase_authentication": "workspace:^",
-        "vue": "3.4.35"
+        "vue": "^3.4.35",
     },
     "devDependencies": {
         "@eslint/js": "^9.8.0",
         "@types/eslint": "^9",
         "@types/node": "^20.2.5",
         "@vitejs/plugin-vue": "^5.0.5",
-        "eslint": "9.x",
+        "eslint": "^9.8.0",
         "eslint-plugin-vue": "^9.27.0",
         "globals": "^15.9.0",
         "prettier": "^3.3.3",
