--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -17,11 +17,14 @@
         "@fortawesome/free-regular-svg-icons": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/vue-fontawesome": "^3.0.8",
+        "@intlify/unplugin-vue-i18n": "^4.0.0",
         "@primevue/themes": "4.0.4",
         "@vueuse/core": "^10.11.0",
         "primevue": "^4.0.4",
         "supabase_authentication": "workspace:^",
-        "vue": "^3.4.36"
+        "vue": "^3.4.35",
+        "vue-country-flag-next": "^2.3.2",
+        "vue-i18n": "9"
     },
     "devDependencies": {
         "@eslint/js": "^9.8.0",
@@ -32,6 +35,7 @@
         "eslint-plugin-vue": "^9.27.0",
         "globals": "^15.9.0",
         "prettier": "^3.3.3",
+        "sass": "^1.77.8",
         "typescript": "^5.2.2",
         "typescript-eslint": "^8.0.0",
         "vite": "^5.3.4",
